<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerPartidaVista">

    <TextView
        android:id="@+id/InfoVerPartida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Información:"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        />

    <TextView
        android:id="@+id/TextInfoVerPartida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/InfoVerPartida"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text=""
        android:textSize="25sp" />

    <TextView
        android:id="@+id/PreguntaVerPartida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/TextInfoVerPartida"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="Pregunta:"
        android:textSize="25sp" />
    <TextView
        android:id="@+id/TextPregVerPartida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/PreguntaVerPartida"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text=""
        android:textSize="25sp" />

    <TextView
        android:id="@+id/OpcionesVerPartida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/TextPregVerPartida"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="Opciones:"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/TextOpc1VerPartida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/OpcionesVerPartida"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text=""
        android:textSize="25sp" />
    <TextView
        android:id="@+id/TextOpc2VerPartida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/TextOpc1VerPartida"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text=""
        android:textSize="25sp" />
    <TextView
        android:id="@+id/TextOpc3VerPartida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/TextOpc2VerPartida"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text=""
        android:textSize="25sp" />
    <TextView
        android:id="@+id/TextOpc4VerPartida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/TextOpc3VerPartida"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text=""
        android:textSize="25sp" />

    <TextView
        android:id="@+id/InfoNumPantallas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/TextOpc4VerPartida"
        android:layout_marginTop="40dp"
        android:autoSizeTextType="uniform"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:text="Previsualización pantalla"
        android:textSize="15sp" />

    <Button
        android:id="@+id/BtnSiguienteVerPtll"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/InfoNumPantallas"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="SIGUIENTE" />

    <Button
        android:id="@+id/BtnAnteriorVerPtll"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/BtnSiguienteVerPtll"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="ANTERIOR" />
    <Button
        android:id="@+id/BtnTerminarVerPtll"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/BtnAnteriorVerPtll"
        android:layout_marginTop="10dp"
        android:text="TERMINAR"
        />
</RelativeLayout>