<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrearTematicaVista">

    <TextView
        android:id="@+id/textoTituloCrearTematica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="Crear temática"
        android:textSize="25sp"
        android:layout_marginTop="40dp" />

    <EditText
        android:id="@+id/editTextCrearTematica"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textoTituloCrearTematica"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:hint="Nombre de la temática"
        android:maxLength="50" />

    <EditText
        android:id="@+id/editTextCrearTematicaDesacripcion"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextCrearTematica"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:hint="Descripción de la temática (opcional)"
        android:maxLength="500" />


    <TextView
        android:id="@+id/TextoComprobacionCrearTematica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        android:layout_below="@id/editTextCrearTematicaDesacripcion"
        android:layout_marginTop="20dp" />


    <Button
        android:id="@+id/buttonCrearTematica"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/TextoComprobacionCrearTematica"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="Crear" />
    <Button
        android:id="@+id/buttonReturnTematica"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonCrearTematica"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="Atrás" />
    <TextView
        android:id="@+id/testViewTestError"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="Fallo"/>


</RelativeLayout>